--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 discord.py==2.6.4
 Flask==3.1.2
+google-genai
 protobuf==6.33.2
 psutil==7.1.3
 pytest==9.0.2
 python-dotenv==1.2.1
 pytz==2025.2
-google-genai==1.55.0
