--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
+aiohttp==3.13.2
 discord.py==2.6.4
 Flask==3.1.2
-google-genai
-protobuf==6.33.2
+google_genai==1.55.0
+protobuf==6.33.4
 psutil==7.1.3
 pytest==9.0.2
 python-dotenv==1.2.1
