--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,22 @@
 [tool.ruff]
-# Options globales (Linter/Checker)
-target-version = "py312"
+target-version = "py314"
 line-length = 88
-# NOTE : "line-ending" a été déplacé dans [tool.ruff.format]
+
+exclude = [
+    ".venv", 
+    ".git", 
+    "__pycache__", 
+    "docs",
+    "tests"
+]
 
 [tool.ruff.lint]
 select = [
-    "E", "W", "F", "I", "UP",
+    "E",
+    "W",
+    "F",
+    "I",
+    "UP",
     "B",
     "N",
     "SIM",
@@ -15,31 +25,27 @@ select = [
     "ANN",
     "ERA",
     "RUF",
+    "ASYNC",
+    "PERF",
+    "LOG",
+    "C90",
 ]
 
-exclude = [
-    ".venv",
-    ".git",
-    "__pycache__",
-    "docs",
-]
-
-ignore = ["E501", "ANN001", "ARG001", "ARG002", "RUF001"] 
+ignore = ["E501", "ANN002", "RUF001"]
 
 [tool.ruff.lint.flake8-annotations]
-ignore-fully-untyped = false  
+ignore-fully-untyped = false
 suppress-none-returning = false
 
 [tool.ruff.lint.per-file-ignores]
+"cog/*" = ["ARG001", "ARG002"]
 
 [tool.ruff.lint.isort]
-known-first-party = ["cogs", "modules", "Lyxios", "main", "PARAMS"]
+known-first-party = ["cog", "modules", "Lyxios", "main", "PARAMS"]
 combine-as-imports = true
 force-sort-within-sections = true
 
-# NOUVELLE SECTION - Ceci est l'endroit correct pour les options de formatage
 [tool.ruff.format]
-# C'est ici que 'line-ending' doit se trouver.
 line-ending = "lf"
 quote-style = "double"
 docstring-code-format = true
